kubernetes-basic-yaml/stg/app-one/app-one-stg-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-one-stg-service
spec:
  selector:
    app: app-one-stg-web-server
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 80
