kubernetes-basic-yaml/stg/app-one/app-one-stg-ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-one-stg-ingress
  namespace: stg
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app-one.okkarmin.com
      secretName: stg-tls
  rules:
    - host: app-one.okkarmin.com
      http:
        paths:
          - path: /stg(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: app-one-stg-service
                port:
                  number: 9090
